--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,19 @@ edition = "2018"
 [lib]
 crate-type = ["cdylib", "lib"]
 
-[dependencies]
-hex = "0.4.3"
+[dependencies.hex]
+version = "0.4.3"
+
+[dependencies.yaml-rust]
+version = "~0.3.5"
+optional = true
+
+[dependencies.log]
+version = "~0.4"
+
+[dependencies.env_logger]
+version = "~0.9"
 
 [features]
 web2 = []
+yaml = ["yaml-rust"]
