--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,10 @@ version = "~0.4"
 [dependencies.env_logger]
 version = "~0.9"
 
+[dependencies.url]
+version = "~2.2.2"
+optional = true
+
 [features]
 web2 = []
-yaml = ["yaml-rust"]
+yaml = ["yaml-rust", "url"]
