Add yaml parse for controller

--- a/testdata/source.yaml
+++ b/testdata/source.yaml
@@ -1,4 +1,10 @@
+delay: 13
+timeout: 42
 sources:
+  - engine: bar
+    endpoints:
+      - url: https://xyzzy.net
+        validator: 12r12
   - engine: foo
     schedule:
       delay: 22
@@ -8,3 +14,4 @@ sources:
         validator: foov
       - url: https://bar.com/baz
         validator: barv
+  
