--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,20 +10,20 @@ edition = "2018"
 crate-type = ["cdylib", "lib"]
 
 [dependencies.hex]
-version = "0.4.3"
+version = "^0.4"
 
 [dependencies.yaml-rust]
-version = "~0.3.5"
+version = "^0.3.5"
 optional = true
 
 [dependencies.log]
-version = "~0.4"
+version = "^0.4"
 
 [dependencies.env_logger]
-version = "~0.9"
+version = "^0.9"
 
 [dependencies.url]
-version = "~2.2.2"
+version = "^2.2"
 
 [features]
 web2 = []
