--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.0.1-alpha.1"
 authors = ["nolash <dev@holbrook.no>"]
 edition = "2018"
 rust-version = "1.56"
+license = "GPL-3.0-or-later"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
